force-app/main/default/objects/EC_Custom_Settings__c/EC_Custom_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>EC Custom Settings</label>
</CustomObject>