force-app/main/default/objects/EC_Custom_Settings__c/fields/CloudCraze_Order_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>CloudCraze_Order_Owner_Id__c</fullName>
    <label>CloudCraze Order Owner Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>