force-app/main/default/objects/EC_Custom_Settings__c/fields/Default_Order_Routing_To_SAP__c.field-meta.xml
<CustomField>
    <fullName>Default_Order_Routing_To_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Order Routing To SAP</label>
    <type>Checkbox</type>
</CustomField>