force-app/main/default/objects/EC_Custom_Settings__c/fields/Instance_Domain__c.field-meta.xml
<CustomField>
    <fullName>Instance_Domain__c</fullName>
    <label>Instance Domain</label>
    <type>Url</type>
</CustomField>