force-app/main/default/objects/EC_Custom_Settings__c/fields/Org_CRM_Connection_Name__c.field-meta.xml
<CustomField>
    <fullName>Org_CRM_Connection_Name__c</fullName>
    <label>Org CRM Connection Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>