force-app/main/default/objects/EC_Custom_Settings__c/fields/products_per_page__c.field-meta.xml
<CustomField>
    <fullName>products_per_page__c</fullName>
    <label>Products per page</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>