force-app/main/default/objects/EC_Custom_Settings__c/fields/Territory_Account_Record_Type_Label__c.field-meta.xml
<CustomField>
    <fullName>Territory_Account_Record_Type_Label__c</fullName>
    <label>Territory Account Record Type Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>